[package]
name = "identeco-utoipa-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = { version = "4", features = ["actix_extras", "yaml"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
actix-web = "4"
serde_json = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
